[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/player/Player3D.gd" type="Script" id=1]
[ext_resource path="res://3d_assets/pickpocket.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/player/player_headshot.png" type="Texture" id=3]
[ext_resource path="res://entities/shared/NavTarget.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 2.05221
height = 7.07236

[sub_resource type="CylinderShape" id=2]
radius = 12.0307
height = 14.2532

[node name="Player" type="KinematicBody" groups=[
"Players",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
collision_mask = 0
script = ExtResource( 1 )
dialog_speaker_texture = ExtResource( 3 )
nav_target_path = NodePath("NavTarget")

[node name="pickpocket" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 5.74425, 0 )
shape = SubResource( 1 )

[node name="CamBase" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CamBase"]
transform = Transform( 4.95777, -0.228034, 0.607061, 0, 4.68067, 1.75823, -0.648478, -1.74338, 4.64113, 5.99398, 17.598, 26.9064 )
fov = 65.512

[node name="PickupZone" type="Area" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="PickupZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.154023, 5.07955, 0.0866187 )
shape = SubResource( 2 )

[node name="NavTarget" type="Spatial" parent="."]
script = ExtResource( 4 )
nav_shift_radius = 2.0
entity_path = NodePath("..")
[connection signal="body_entered" from="PickupZone" to="." method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="." method="_on_PickupZone_body_exited"]
